examples/pilot-v2/server/build/k8s/pilotv2server.v2.dep.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    version: v2
    app: registry
    name: pilotv2server
  name: pilotv2server-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      name: pilotv2server
      app: registry
      version: v2
  template:
    metadata:
      labels:
        name: pilotv2server
        app: registry
        version: v2
        ver: v2
        debug: "true"
    spec:
      containers:
      - image: go-chassis/pilotv2server:latest
        imagePullPolicy: IfNotPresent
        name: pilotv2server-v2
        ports:
        - containerPort: 5001
          protocol: TCP
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
