examples/pilot-v2/server/build/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: pilotv2server
  name: pilotv2server
  namespace: default
spec:
  ports:
  - name: rest
    port: 5001
    protocol: TCP
    targetPort: 5001
  selector:
    name: pilotv2server
  type: ClusterIP
