examples/pilot-v2/server/build/k8s/destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: pilotv2server
spec:
  host: pilotv2server
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
      ver: v2
      debug: "true"
  - name: v3
    labels:
      version: v3
---
